--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
     background-color: #111; /* خلفية الزر أسود داكن */
     color: #fff;
     padding: 15px 30px;
@@ -30,7 +30,7 @@
     font-weight: bold;
     text-decoration: none;
     border-radius: 10px;
-    box-shadow: 0 0 8px rgba(255, 0, 0, 0.8);
+    box-shadow: 0 0 8px 2px rgba(255, 0, 0, 0.7); /* توهج أحمر ناعم */
     transition: box-shadow 0.3s ease;
   }
   a.btn:hover {
@@ -43,7 +43,7 @@
     transform: translate(-50%, -50%);
     width: 115%;
     height: 115%;
-    background: rgba(255, 0, 0, 0.5);
+    background: rgba(255, 0, 0, 0.3);
     border-radius: 10px;
     filter: blur(10px);
     opacity: 0.6;
@@ -53,23 +53,27 @@
   a.btn:hover::before {
     opacity: 1;
   }
-  .icon {
-    font-size: 24px;
+  .icon-img {
+    width: 28px;
+    height: 28px;
+    object-fit: contain;
+    filter: none; /* الألوان الأصلية */
   }
 </style>
-<!-- أيقونات FontAwesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
 
 <div class="buttons-container">
   <a href="https://t.me/xbet_mux" class="btn" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-telegram icon"></i> قناة تيليجرام
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="icon-img" />
+    قناة تيليجرام
   </a>
   <a href="https://play.gooqle.co/store/apps/details?id=xparibet&promo=evo3&hl=en&gl=US" class="btn" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/XpariBet_Logo.png" alt="XpariBet" class="icon-img" />
     تحميل تطبيق XpariBet
   </a>
   <a href="https://t.me/xbet_Mux/418" class="btn" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="PariXploit" class="icon-img" />
     تحميل PariXploit
   </a>
 </div>
