--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       color: #fff;
     }
 
+    /* ✅ الشريط العلوي */
     .top-bar {
       background-color: #111;
       color: #fff;
@@ -27,10 +28,11 @@
     .wolf-icon {
       width: 60px;
       height: 60px;
-      background-image: url('https://i.imgur.com/6XZUjGo.png');
+      background-image: url('image.jpeg'); /* ← صورتك من المستودع */
       background-size: cover;
       background-position: center;
       border-radius: 50%;
+      flex-shrink: 0;
     }
 
     .top-bar .title {
@@ -128,6 +130,35 @@
       filter: none;
     }
 
+    /* ✅ أيقونة أندرويد بـ CSS */
+    .android-css-icon {
+      width: 32px;
+      height: 32px;
+      background-color: #a4c639;
+      border-radius: 5px;
+      position: relative;
+    }
+
+    .android-css-icon::before,
+    .android-css-icon::after {
+      content: '';
+      position: absolute;
+      width: 4px;
+      height: 10px;
+      background: #fff;
+      top: 2px;
+    }
+
+    .android-css-icon::before {
+      left: 6px;
+      transform: rotate(45deg);
+    }
+
+    .android-css-icon::after {
+      right: 6px;
+      transform: rotate(-45deg);
+    }
+
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
   </style>
 </head>
@@ -153,12 +184,12 @@
     </a>
 
     <a href="https://play.gooqle.co/store/apps/details?id=xparibet&promo=evo3&hl=en&gl=US" class="btn" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/888/888857.png" class="icon-img" alt="Android" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="icon-img" alt="Google Play" />
       تحميل تطبيق XpariBet
     </a>
 
     <a href="https://t.me/xbet_Mux/418" class="btn" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/888/888857.png" class="icon-img" alt="Android" />
+      <div class="android-css-icon"></div>
       تحميل PariXploit
     </a>
   </div>
