--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     .wolf-icon {
       width: 60px;
       height: 60px;
-      background-image: url('image.jpeg'); /* ← صورتك من المستودع */
+      background-image: url('image.jpeg'); /* ← صورة الذئب */
       background-size: cover;
       background-position: center;
       border-radius: 50%;
@@ -130,35 +130,6 @@
       filter: none;
     }
 
-    /* ✅ أيقونة أندرويد بـ CSS */
-    .android-css-icon {
-      width: 32px;
-      height: 32px;
-      background-color: #a4c639;
-      border-radius: 5px;
-      position: relative;
-    }
-
-    .android-css-icon::before,
-    .android-css-icon::after {
-      content: '';
-      position: absolute;
-      width: 4px;
-      height: 10px;
-      background: #fff;
-      top: 2px;
-    }
-
-    .android-css-icon::before {
-      left: 6px;
-      transform: rotate(45deg);
-    }
-
-    .android-css-icon::after {
-      right: 6px;
-      transform: rotate(-45deg);
-    }
-
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
   </style>
 </head>
@@ -184,12 +155,12 @@
     </a>
 
     <a href="https://play.gooqle.co/store/apps/details?id=xparibet&promo=evo3&hl=en&gl=US" class="btn" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="icon-img" alt="Google Play" />
+      <img src="pari.png" class="icon-img" alt="Xpari" />
       تحميل تطبيق XpariBet
     </a>
 
     <a href="https://t.me/xbet_Mux/418" class="btn" target="_blank">
-      <div class="android-css-icon"></div>
+      <img src="apk.png" class="icon-img" alt="APK" />
       تحميل PariXploit
     </a>
   </div>
