--- a/index.html
+++ b/index.html
@@ -52,18 +52,32 @@
       color: #fff;
     }
 
-    .dollar-icon {
+    /* ✅ أيقونة القناع */
+    .mask-icon {
       width: 34px;
       height: 34px;
+      background: radial-gradient(ellipse at center, #fff 20%, #000 20%, #000 80%, transparent 80%);
       border-radius: 50%;
-      background-color: #0f0;
-      color: #000;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      box-shadow: 0 0 10px rgba(0,255,0,0.6);
+      box-shadow: inset 0 0 5px #f00, 0 0 10px #f00;
+      position: relative;
+    }
+
+    .mask-icon::before, .mask-icon::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      width: 6px;
+      height: 6px;
+      background: #fff;
+      border-radius: 50%;
+    }
+
+    .mask-icon::before {
+      left: 8px;
+    }
+
+    .mask-icon::after {
+      right: 8px;
     }
 
     .container {
@@ -94,9 +108,10 @@
       transition: transform 0.2s ease, box-shadow 0.3s ease;
       border: none;
       outline: none;
+      user-select: none;
     }
 
-    a.btn:focus, a.btn:active {
+    a.btn:focus {
       outline: none;
     }
 
@@ -143,8 +158,8 @@
 
   <!-- ✅ النص تحت الشريط العلوي -->
   <div class="subtitle">
-    <span>طريقك لربح الأموال</span>
-    <div class="dollar-icon">$</div>
+    <span>تثبيت أداة PariXploit</span>
+    <div class="mask-icon"></div>
   </div>
 
   <!-- ✅ الأزرار -->
