--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Muxbet</title>
   <style>
-    html, body {
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+
+    /* خط عربي مخصص */
+    @font-face {
+      font-family: 'ArabicFont';
+      src: url('arabic.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    body {
       margin: 0;
       padding: 0;
       background-color: #000;
       color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'ArabicFont', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
+    /* البار العلوي */
     .top-bar {
+      width: 100%;
       background-color: #111;
       padding: 15px 25px;
       display: flex;
@@ -39,151 +54,86 @@
       letter-spacing: 1px;
     }
 
-    .subtitle {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      font-size: 20px;
-      margin: 20px 0 30px 0;
-    }
-
-    .mask-icon {
-      width: 34px;
-      height: 34px;
-      background: radial-gradient(ellipse at center, #fff 20%, #000 20%, #000 80%, transparent 80%);
-      border-radius: 50%;
-      box-shadow: inset 0 0 5px #f00, 0 0 10px #f00;
-      position: relative;
-    }
-
-    .mask-icon::before, .mask-icon::after {
-      content: '';
-      position: absolute;
-      top: 10px;
-      width: 6px;
-      height: 6px;
-      background: #fff;
-      border-radius: 50%;
-    }
-
-    .mask-icon::before { left: 8px; }
-    .mask-icon::after { right: 8px; }
-
+    /* الحاوية العامة */
     .container {
+      width: 90%;
+      max-width: 450px;
+      margin-top: 40px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      gap: 30px;
-      padding-bottom: 60px;
+      gap: 25px;
     }
 
-    .btn-block {
-      text-align: center;
-      width: 90%;
-      max-width: 420px;
-    }
-
-    a.btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15px;
+    /* الأزرار */
+    .btn {
       background-color: #111;
       color: #fff;
       padding: 20px;
-      font-size: 20px;
-      font-weight: bold;
+      border-radius: 15px;
+      text-align: center;
       text-decoration: none;
-      border-radius: 12px;
-      box-shadow: 0 0 8px 2px rgba(255, 0, 0, 0.7);
-      transition: transform 0.2s ease, box-shadow 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.6);
+      transition: transform 0.2s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       border: none;
-      outline: none;
-      user-select: none;
-      width: 100%;
       position: relative;
     }
 
-    a.btn:focus { outline: none; }
-    a.btn:active { transform: scale(1.07); }
+    .btn:focus { outline: none; }
+    .btn:active { transform: scale(1.07); }
 
-    a.btn::before {
-      content: '';
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      width: 115%;
-      height: 115%;
-      background: rgba(255, 0, 0, 0.3);
-      border-radius: 12px;
-      filter: blur(10px);
-      opacity: 0.6;
-      transition: opacity 0.3s ease;
-      z-index: -1;
+    .btn img {
+      width: 38px;
+      height: 38px;
+      margin-bottom: 10px;
     }
 
-    a.btn:hover::before { opacity: 1; }
-
-    .icon-img {
-      width: 32px;
-      height: 32px;
-      object-fit: contain;
+    .btn .label {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
 
-    .description {
+    .btn .desc {
+      font-size: 14px;
       color: #bbb;
-      font-size: 15px;
-      margin-top: 8px;
-      line-height: 1.6;
+      line-height: 1.4;
     }
-
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
   </style>
 </head>
 <body>
 
-  <!-- ✅ الشريط العلوي -->
+  <!-- البار العلوي -->
   <div class="top-bar">
     <div class="wolf-icon"></div>
     <div class="title">Muxbet</div>
   </div>
 
-  <!-- ✅ النص تحت الشريط العلوي -->
-  <div class="subtitle">
-    <span>تثبيت أداة PariXploit</span>
-    <div class="mask-icon"></div>
-  </div>
-
-  <!-- ✅ الأزرار مع الأوصاف -->
+  <!-- الأزرار -->
   <div class="container">
 
-    <!-- زر 1 -->
-    <div class="btn-block">
-      <a href="https://t.me/xbet_mux" class="btn" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" class="icon-img" />
-        قناة تيليجرام
-      </a>
-      <div class="description">تابع آخر التحديثات والنتائج من المستخدمين.</div>
-    </div>
+    <!-- زر تيليجرام -->
+    <a href="https://t.me/xbet_mux" class="btn" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" />
+      <div class="label">قناة تيليجرام</div>
+      <div class="desc">تابع آخر التحديثات والنتائج من المستخدمين.</div>
+    </a>
 
-    <!-- زر 2 -->
-    <div class="btn-block">
-      <a href="https://play.gooqle.co/store/apps/details?id=xparibet&promo=evo3&hl=en&gl=US" class="btn" target="_blank">
-        <img src="pari.png" class="icon-img" alt="Xpari" />
-        تحميل تطبيق XpariBet
-      </a>
-      <div class="description">التطبيق الأساسي للعب – حمّله لتبدأ.</div>
-    </div>
+    <!-- زر XpariBet -->
+    <a href="https://play.gooqle.co/store/apps/details?id=xparibet&promo=evo3&hl=en&gl=US" class="btn" target="_blank">
+      <img src="pari.png" alt="XpariBet" />
+      <div class="label">تحميل تطبيق XpariBet</div>
+      <div class="desc">التطبيق الأساسي للعب – حمّله لتبدأ.</div>
+    </a>
 
-    <!-- زر 3 -->
-    <div class="btn-block">
-      <a href="https://t.me/xbet_Mux/418" class="btn" target="_blank">
-        <img src="apk.png" class="icon-img" alt="APK" />
-        تحميل PariXploit
-      </a>
-      <div class="description">السكربت المتكامل لتحليل وتحقيق نتائج.</div>
-    </div>
+    <!-- زر PariXploit -->
+    <a href="https://t.me/xbet_Mux/418" class="btn" target="_blank">
+      <img src="apk.png" alt="PariXploit" />
+      <div class="label">تحميل PariXploit</div>
+      <div class="desc">السكربت المتكامل لتحليل وتحقيق نتائج.</div>
+    </a>
 
   </div>
 
