--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     .top-bar {
       width: 100%;
       background-color: #111;
-      padding: 15px 40px; /* زدنا البادينج عاليسار */
+      padding: 15px 40px;
       display: flex;
       align-items: center;
       gap: 15px;
@@ -45,7 +45,7 @@
       background-position: center;
       border-radius: 50%;
       flex-shrink: 0;
-      margin-left: 10px; /* مسافة اضافية عن حافة الشاشة */
+      margin-left: 10px;
     }
 
     .title {
@@ -62,7 +62,7 @@
       display: flex;
       flex-direction: column;
       gap: 25px;
-      align-items: center; /* وسطنا كل المحتوى داخل الحاوية */
+      align-items: center;
       margin-left: auto;
       margin-right: auto;
     }
@@ -81,8 +81,8 @@
       align-items: center;
       border: none;
       position: relative;
-      width: 100%; /* عرض الزر كامل داخل الحاوية */
-      max-width: 320px; /* تحديد أقصى عرض */
+      width: 70%; /* صغرنا العرض 30% */
+      max-width: 224px; /* 70% من 320px */
     }
 
     .btn:focus { outline: none; }
@@ -101,12 +101,11 @@
     }
 
     .btn .desc {
-      font-size: 14px;
+      font-size: 12px; /* صغرنا الخط */
       color: #bbb;
       line-height: 1.4;
     }
 
-    /* نص إضافي تحت الأزرار */
     .extra-text {
       margin-top: 40px;
       max-width: 450px;
@@ -115,6 +114,12 @@
       line-height: 1.5;
       text-align: center;
       font-family: 'ArabicFont', sans-serif;
+    }
+
+    .extra-text .title {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -148,6 +153,7 @@
   </div>
 
   <div class="extra-text">
+    <div class="title">نصائح:</div>
     🎯 أداة ذكية تساعدك على تحليل الألعاب وتحقيق أفضل النتائج بشكل يومي.<br />
     🔥 استخدم أحدث التقنيات مع PariXploit لتحليل التفاحات بدقة واحتراف!<br />
     ⚡ لا تنس ايداع 3 دولار كي يعمل معك!
