--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       align-items: center;
       border: none;
       position: relative;
-      width: 70%; /* صغرنا العرض 30% */
-      max-width: 224px; /* 70% من 320px */
+      width: 70%;
+      max-width: 224px;
     }
 
     .btn:focus { outline: none; }
@@ -101,7 +101,7 @@
     }
 
     .btn .desc {
-      font-size: 12px; /* صغرنا الخط */
+      font-size: 10px;
       color: #bbb;
       line-height: 1.4;
     }
@@ -110,16 +110,10 @@
       margin-top: 40px;
       max-width: 450px;
       color: #888;
-      font-size: 16px;
+      font-size: 12px;
       line-height: 1.5;
       text-align: center;
       font-family: 'ArabicFont', sans-serif;
-    }
-
-    .extra-text .title {
-      font-size: 22px;
-      font-weight: bold;
-      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -153,7 +147,6 @@
   </div>
 
   <div class="extra-text">
-    <div class="title">نصائح:</div>
     🎯 أداة ذكية تساعدك على تحليل الألعاب وتحقيق أفضل النتائج بشكل يومي.<br />
     🔥 استخدم أحدث التقنيات مع PariXploit لتحليل التفاحات بدقة واحتراف!<br />
     ⚡ لا تنس ايداع 3 دولار كي يعمل معك!
