--- a/index.html
+++ b/index.html
@@ -1,55 +1,99 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>فتح التطبيق</title>
-<style>
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #6a11cb, #2575fc);
-    color: white;
-    text-align: center;
-  }
-  h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-  }
-  .btn {
-    padding: 15px 30px;
-    font-size: 1.2em;
-    background: #ff6b6b;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    color: white;
-    transition: 0.3s;
-  }
-  .btn:hover {
-    background: #ff4757;
-  }
-  p {
-    margin-top: 20px;
-    font-size: 0.9em;
-    color: #ddd;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>واجهة التوقع</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: #f0f0f0;
+      text-align: center;
+      padding: 30px;
+    }
+
+    .circle {
+      width: 200px;
+      height: 200px;
+      margin: 0 auto 20px;
+      border-radius: 50%;
+      background: radial-gradient(circle, #00aaff, #004466);
+      color: white;
+      font-size: 2em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 1em;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .reset { background: #e74c3c; color: white; }
+    .predict { background: #2ecc71; color: white; }
+    .promo { background: #333; color: white; }
+    .telegram { background: #3498db; color: white; }
+
+    .promo-code {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .copy-icon {
+      cursor: pointer;
+      font-size: 1.2em;
+      background: #ddd;
+      padding: 5px;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-  <h1>جاري فتح التطبيق…</h1>
-  <button class="btn" onclick="openApp()">فتح التطبيق الآن</button>
-  <p>إذا لم يفتح التطبيق، تأكد أنه مثبت على جهازك.</p>
+
+  <div class="circle" id="multiplier">X0.00</div>
+
+  <button class="predict" onclick="predict()">عرض التوقع</button>
+  <button class="reset" onclick="reset()">إعادة تعيين</button>
+
+  <div class="promo-code">
+    <button class="promo">الرمز الترويجي: EVO3</button>
+    <span class="copy-icon" onclick="copyCode()">📋</span>
+  </div>
+
+  <br>
+  <a href="https://t.me/xbet_mux" target="_blank">
+    <button class="telegram">انضم للقناة</button>
+  </a>
 
   <script>
-    function openApp() {
-      // رابط Intent لفتح التطبيق
-      window.location.href = "intent://#Intent;package=com.CYBER.EVO;end";
+    function predict() {
+      const random = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
+      document.getElementById('multiplier').textContent = `X${random}`;
+    }
+
+    function reset() {
+      document.getElementById('multiplier').textContent = 'X0.00';
+    }
+
+    function copyCode() {
+      navigator.clipboard.writeText('EVO3');
+      alert('تم نسخ الرمز الترويجي!');
     }
   </script>
+
 </body>
 </html>
