--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>واجهة التوقع</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: #f0f0f0;
+      background: #0b1e3f;
+      color: white;
+      margin: 0;
+      padding: 20px;
       text-align: center;
-      padding: 30px;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: auto;
     }
 
     .circle {
-      width: 200px;
-      height: 200px;
-      margin: 0 auto 20px;
+      width: 150px;
+      height: 150px;
+      margin: 20px auto;
       border-radius: 50%;
       background: radial-gradient(circle, #00aaff, #004466);
-      color: white;
-      font-size: 2em;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-size: 2em;
       animation: pulse 2s infinite;
     }
 
@@ -32,20 +39,22 @@
     }
 
     button {
-      margin: 10px;
-      padding: 10px 20px;
+      width: 90%;
+      margin: 10px auto;
+      padding: 12px;
       font-size: 1em;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      display: block;
     }
 
-    .reset { background: #e74c3c; color: white; }
     .predict { background: #2ecc71; color: white; }
-    .promo { background: #333; color: white; }
+    .reset { background: #e74c3c; color: white; }
     .telegram { background: #3498db; color: white; }
+    .promo { background: #333; color: white; }
 
-    .promo-code {
+    .promo-section {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -57,27 +66,33 @@
       cursor: pointer;
       font-size: 1.2em;
       background: #ddd;
-      padding: 5px;
+      color: black;
+      padding: 5px 10px;
       border-radius: 5px;
+    }
+
+    a {
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
-  <div class="circle" id="multiplier">X0.00</div>
+  <div class="container">
+    <div class="circle" id="multiplier">X0.00</div>
 
-  <button class="predict" onclick="predict()">عرض التوقع</button>
-  <button class="reset" onclick="reset()">إعادة تعيين</button>
+    <button class="predict" onclick="predict()">عرض التوقع</button>
+    <button class="reset" onclick="reset()">إعادة تعيين</button>
 
-  <div class="promo-code">
-    <button class="promo">الرمز الترويجي: EVO3</button>
-    <span class="copy-icon" onclick="copyCode()">📋</span>
+    <div class="promo-section">
+      <button class="promo">الرمز الترويجي: EVO3</button>
+      <span class="copy-icon" onclick="copyCode()">📋</span>
+    </div>
+
+    <a href="https://t.me/xbet_mux" target="_blank">
+      <button class="telegram">انضم للقناة</button>
+    </a>
   </div>
-
-  <br>
-  <a href="https://t.me/xbet_mux" target="_blank">
-    <button class="telegram">انضم للقناة</button>
-  </a>
 
   <script>
     function predict() {
@@ -91,7 +106,7 @@
 
     function copyCode() {
       navigator.clipboard.writeText('EVO3');
-      alert('تم نسخ الرمز الترويجي!');
+      alert('✅ تم نسخ الرمز الترويجي!');
     }
   </script>
 
