--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>واجهة التوقع</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- خط Tajawal من Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Tajawal', sans-serif;
       background: #0b1e3f;
       color: white;
       margin: 0;
@@ -29,13 +31,17 @@
       align-items: center;
       justify-content: center;
       font-size: 2em;
-      animation: pulse 2s infinite;
+      transition: all 0.3s ease-in-out;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
+    .animate-change {
+      animation: flash 0.5s ease-in-out;
+    }
+
+    @keyframes flash {
+      0% { transform: scale(1); background: #00aaff; }
+      50% { transform: scale(1.1); background: #00ffff; }
+      100% { transform: scale(1); background: #00aaff; }
     }
 
     button {
@@ -47,12 +53,29 @@
       border-radius: 8px;
       cursor: pointer;
       display: block;
+      position: relative;
+      z-index: 1;
+      color: white;
     }
 
-    .predict { background: #2ecc71; color: white; }
-    .reset { background: #e74c3c; color: white; }
-    .telegram { background: #3498db; color: white; }
-    .promo { background: #333; color: white; }
+    button::before {
+      content: '';
+      position: absolute;
+      top: -5px;
+      left: -5px;
+      right: -5px;
+      bottom: -5px;
+      background: #00ffff;
+      border-radius: 12px;
+      filter: blur(10px);
+      z-index: -1;
+      opacity: 0.6;
+    }
+
+    .predict { background: #2ecc71; }
+    .reset { background: #e74c3c; }
+    .telegram { background: #3498db; }
+    .promo { background: #333; }
 
     .promo-section {
       display: flex;
@@ -97,11 +120,21 @@
   <script>
     function predict() {
       const random = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
-      document.getElementById('multiplier').textContent = `X${random}`;
+      const multiplier = document.getElementById('multiplier');
+      multiplier.textContent = `X${random}`;
+      multiplier.classList.add('animate-change');
+      setTimeout(() => {
+        multiplier.classList.remove('animate-change');
+      }, 500);
     }
 
     function reset() {
-      document.getElementById('multiplier').textContent = 'X0.00';
+      const multiplier = document.getElementById('multiplier');
+      multiplier.textContent = 'X0.00';
+      multiplier.classList.add('animate-change');
+      setTimeout(() => {
+        multiplier.classList.remove('animate-change');
+      }, 500);
     }
 
     function copyCode() {
